--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
 :root{
     --header-bg-- : #faedcd;
     --body-bg-- : #e3d5ca;
+    --bg-color-- : #d4d4d8;
 }
 
 *{
     padding: 0px;
     margin: 0px;
+}
+body{
+    background-color: var(--body-bg--);
 }
 .heading{
     background-color: var(--header-bg--);
@@ -19,7 +23,6 @@
 }
 
 .section{
-    background-color: var(--body-bg--);
     width: 80%;
     margin: 0rem auto;
     padding: 3rem 0rem;
